# oxideav-g711

./: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
benches/: batch.rs  cacheladder.rs  decode.rs  encode.rs  roundtrip.rs  segment.rs  streaming.rs  voice.rs
examples/: profile_g711.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: cross_law_transcode.rs  decode_pipeline.rs  encode_pipeline.rs  factory_params.rs  per_sample_invariants.rs  streaming_pipeline.rs  zero_suppress_invariants.rs
src/: alaw.rs  lib.rs  mulaw.rs  tables.rs
tests/: batch_slice_api.rs  bit_exact_reference.rs  cross_law_table34.rs  cross_law_transcode.rs  decision_value_lattice.rs  docs_corpus.rs  mulaw_zero_suppression.rs  multichannel_roundtrip.rs  psnr_floor.rs  quantization_property.rs  reference_sequence_g711.rs
