[package]
name = "oxideav-g711"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T G.711 μ-law and A-law (PSTN) codec — decoder + encoder"
repository = "https://github.com/OxideAV/oxideav-g711"
homepage = "https://github.com/OxideAV/oxideav-g711"
readme = "README.md"
keywords = ["multimedia", "audio", "g711", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"

[dev-dependencies]
# Round 173 (depth-mode benchmarks): Criterion drives three bench
# harnesses (`decode`, `encode`, `roundtrip`) so future optimisation
# rounds can A/B-test their tweaks to the per-sample µ-law / A-law
# hot paths (LUT decode, arithmetic encode segment search) against a
# stable, fixture-free baseline. Pinned to the same 0.5 line the
# other OxideAV crates with benches (flac, tta, magicyuv, h264,
# cinepak, pixfmt) already track.
criterion = "0.5"

# Round 173 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained — every PCM input is synthesised in-bench from a
# deterministic xorshift seed and fed through the crate's public
# `mulaw` / `alaw` per-sample helpers plus the trait-surface
# Decoder / Encoder produced by `mulaw::make_decoder` /
# `mulaw::make_encoder` (and the A-law equivalents). No `docs/`
# fixtures or external files are read. Run with:
#     cargo bench -p oxideav-g711 --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false

# Round 206 (depth-mode benchmarks, streaming follow-up to r173):
# measures the streaming session pattern — one encoder + decoder pair
# reused across a burst of frames + packets, mirroring the
# `streaming_pipeline` fuzz target's lifecycle. Eager-drain (one
# packet out per send_frame) plus a deferred-drain shape that
# exercises the encoder's `VecDeque<Packet>` queue at its deepest
# depth. Same `cargo bench -p oxideav-g711 --bench streaming` shape
# as the other benches.
[[bench]]
name = "streaming"
harness = false

# Round 247 (depth-mode benchmarks, voice-distribution follow-up to
# r173 / r206): the existing four bench files all feed the per-sample
# math from a uniform-random xorshift32 stream, which exercises every
# segment of the companding curve equally but does not match the
# strongly-near-zero amplitude distribution a real PSTN session
# carries. This file adds eight rows (decode + encode × LUT + arith
# × law, plus a mono 1 s roundtrip per law) driven by a closed-form
# Laplacian generator so the encode LUT touches primarily the small-
# magnitude half of `MULAW_ENCODE` / `ALAW_ENCODE` and the decode
# LUT sees the codeword distribution voice content actually produces.
# Catches input-distribution-sensitive regressions (cache locality,
# segment-search branch profile) that the uniform-random rows do
# not. Same `cargo bench -p oxideav-g711 --bench voice` shape as the
# other benches.
[[bench]]
name = "voice"
harness = false

# Round 189 (depth-mode profiling): flat measure-this-thing driver
# for `samply` / `cargo flamegraph` / `perf record`. Mirrors the
# `benches/{decode,encode,roundtrip}.rs` scenarios byte-for-byte so
# a profile capture corresponds to the bench rows. Pure-Rust, no
# extra deps — uses only `std::time::Instant` and the crate's own
# public per-sample helpers + trait-surface factories.
[[example]]
name = "profile_g711"
path = "examples/profile_g711.rs"
