[package]
name = "oxideav-g711"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T G.711 μ-law and A-law (PSTN) codec — decoder + encoder"
repository = "https://github.com/OxideAV/oxideav-g711"
homepage = "https://github.com/OxideAV/oxideav-g711"
readme = "README.md"
keywords = ["multimedia", "audio", "g711", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"

[dev-dependencies]
# Round 173 (depth-mode benchmarks): Criterion drives three bench
# harnesses (`decode`, `encode`, `roundtrip`) so future optimisation
# rounds can A/B-test their tweaks to the per-sample µ-law / A-law
# hot paths (LUT decode, arithmetic encode segment search) against a
# stable, fixture-free baseline. Pinned to the same 0.5 line the
# other OxideAV crates with benches (flac, tta, magicyuv, h264,
# cinepak, pixfmt) already track.
criterion = "0.5"

# Round 173 benches. Each binary lives in `benches/<name>.rs` and is
# self-contained — every PCM input is synthesised in-bench from a
# deterministic xorshift seed and fed through the crate's public
# `mulaw` / `alaw` per-sample helpers plus the trait-surface
# Decoder / Encoder produced by `mulaw::make_decoder` /
# `mulaw::make_encoder` (and the A-law equivalents). No `docs/`
# fixtures or external files are read. Run with:
#     cargo bench -p oxideav-g711 --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false

# Round 206 (depth-mode benchmarks, streaming follow-up to r173):
# measures the streaming session pattern — one encoder + decoder pair
# reused across a burst of frames + packets, mirroring the
# `streaming_pipeline` fuzz target's lifecycle. Eager-drain (one
# packet out per send_frame) plus a deferred-drain shape that
# exercises the encoder's `VecDeque<Packet>` queue at its deepest
# depth. Same `cargo bench -p oxideav-g711 --bench streaming` shape
# as the other benches.
[[bench]]
name = "streaming"
harness = false

# Round 247 (depth-mode benchmarks, voice-distribution follow-up to
# r173 / r206): the existing four bench files all feed the per-sample
# math from a uniform-random xorshift32 stream, which exercises every
# segment of the companding curve equally but does not match the
# strongly-near-zero amplitude distribution a real PSTN session
# carries. This file adds eight rows (decode + encode × LUT + arith
# × law, plus a mono 1 s roundtrip per law) driven by a closed-form
# Laplacian generator so the encode LUT touches primarily the small-
# magnitude half of `MULAW_ENCODE` / `ALAW_ENCODE` and the decode
# LUT sees the codeword distribution voice content actually produces.
# Catches input-distribution-sensitive regressions (cache locality,
# segment-search branch profile) that the uniform-random rows do
# not. Same `cargo bench -p oxideav-g711 --bench voice` shape as the
# other benches.
[[bench]]
name = "voice"
harness = false

# Round 298 (depth-mode benchmarks, segment-locked follow-up to r247):
# the uniform-random benches spread samples across every segment of
# the companding curve and the r247 `voice` bench concentrates them in
# segments 0..=2 (segment-search fast exit on ~80% of samples). This
# file adds the third corner — every sample is pinned into the top
# segment so the encode segment search resolves to the *same* high
# segment on every sample (the branch-history mirror image of the
# voice row). Eight rows (encode arith + LUT × law, decode LUT × law,
# mono 1 s roundtrip × law). Same `cargo bench -p oxideav-g711
# --bench segment` shape as the other benches.
[[bench]]
name = "segment"
harness = false

# Round 319 (depth-mode benchmarks, size-sweep follow-up to r173 /
# r206 / r247 / r298): the existing bench files all fix the buffer /
# frame size and vary the input *distribution* (uniform / voice /
# segment-locked), law, and path. None sweep a single law + path across
# a geometric ladder of buffer sizes — the axis that exposes the
# L1 -> L2 -> L3 -> DRAM throughput knee of the decode LUT and the
# encode-arith inner loop. This file sweeps 1 KiB .. 4 MiB of input
# codewords for the direct-LUT decode, the trait-surface decode (the
# r289 store path that should roll off as the output Vec outgrows
# cache), and the arithmetic encode formula path. Per-element throughput
# keeps every rung comparable. Same `cargo bench -p oxideav-g711
# --bench cacheladder` shape as the other benches.
[[bench]]
name = "cacheladder"
harness = false

# Round 406 (depth-mode benchmarks, batch-API follow-up): pins the
# three call surfaces (per-sample loop, r406 batch slice helpers,
# trait surface) against each other in one Criterion group per
# direction × law, at the 96 000-element 8 ch / 48 kHz / 250 ms shape.
# Because the trait-surface hot loops delegate to the slice helpers
# since r406, the `trait` − `slice_le` spread within a group is the
# isolated cost of packet/frame framing + the per-call output Vec
# allocation. Plus one µ-law group for the §3.2 zero-suppress slice
# form. Same `cargo bench -p oxideav-g711 --bench batch` shape as the
# other benches.
[[bench]]
name = "batch"
harness = false

# Round 189 (depth-mode profiling): flat measure-this-thing driver
# for `samply` / `cargo flamegraph` / `perf record`. Mirrors the
# `benches/{decode,encode,roundtrip}.rs` scenarios byte-for-byte so
# a profile capture corresponds to the bench rows. Pure-Rust, no
# extra deps — uses only `std::time::Instant` and the crate's own
# public per-sample helpers + trait-surface factories.
[[example]]
name = "profile_g711"
path = "examples/profile_g711.rs"
