[package]
name = "oxideav-g711-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# G.711 is a stateless per-sample companding codec — there is no
# framing layer, no entropy coder, no inter-sample state. Every
# encoded byte decodes to exactly one S16 PCM sample and vice
# versa, so the spec-derived 256-byte decode LUT and the 16-segment
# arithmetic encoder are already covered exhaustively by the
# `bit_exact_reference` test (encode of all 65 536 i16 inputs,
# decode of all 256 bytes). The fuzzer's job here is therefore to
# pound the **trait surface** — `Decoder::send_packet` /
# `receive_frame`, `Encoder::send_frame` / `receive_packet` — with
# attacker-controlled channel counts, packet lengths and frame byte
# blobs. The single-sample math is bit-exact; the framing wrapper
# is where panics, integer overflows, or attacker-driven
# allocations could plausibly hide.
#
# Seven targets cover the seven risk shapes:
#
# - **`decode_pipeline`**: arbitrary bytes through both
#   `mulaw::UlawDecoder` and `alaw::AlawDecoder` at attacker-chosen
#   channel counts (1..=8 — the `pkt.len() % channels` rejection
#   path lives here). Empty packets and pre-EOF flushes are also
#   exercised. Output is discarded.
# - **`encode_pipeline`**: arbitrary bytes interpreted as i16 PCM,
#   fed through both encoders at attacker-chosen channels + sample
#   rate, then the produced packet is fed back through the matching
#   decoder. The decode output must be bit-exact against
#   `decode_sample(encode_sample(s))` applied per-sample (i.e. the
#   trait surface is a faithful wrapper around the per-sample math
#   already test-pinned by `bit_exact_reference`). This catches any
#   framing-layer skew between the two surfaces.
# - **`per_sample_invariants`**: the per-sample contract — sign
#   symmetry (`decode(b) == -decode(b ^ 0x80)` for non-zero magnitudes
#   in A-law; for µ-law one half-step rounding difference is
#   permitted), quantization-step bound (`|decode(encode(s)) - s|`
#   stays within the spec-derived per-segment step), and the
#   encoder's projection-idempotence (`encode(decode(encode(s))) ==
#   encode(s)`). These properties hold *by construction* in the
#   crate; the fuzzer drives them across attacker-chosen i16 / u8
#   sequences as a regression net against future hot-path
#   refactors.
# - **`streaming_pipeline`** (r201): multi-frame / multi-packet
#   session through one encoder + decoder pair. Exercises the
#   encoder's `VecDeque<Packet>` queue (FIFO order, eager vs.
#   deferred drain), pts/dts propagation across many frames, the
#   decoder's `pending` slot under repeated send/receive cycles,
#   mid-stream `flush()` semantics on the decoder, and post-stream
#   `NeedMore` vs. `Eof` behaviour. Complements `encode_pipeline`
#   (which is a single-frame oracle) by hammering cross-frame state
#   that only appears in a multi-frame lifecycle.
# - **`factory_params`** (r224): adversarial `CodecParameters`
#   shapes through all four `make_decoder` / `make_encoder` entry
#   points (mulaw + alaw, decoder + encoder). Targets the
#   parameter-validation surface the other four fuzzers do not
#   reach — `channels == 0`, all twelve named `SampleFormat`
#   variants on the encoder's non-S16 rejection ladder, adversarial
#   `codec_id` strings (empty, mismatched law, free-form), and the
#   full u32 `sample_rate` range including `0` and `u32::MAX` (the
#   latter must not overflow the `i64` cast when building the
#   encoder's `TimeBase`). Successful constructions are exercised
#   with a small attacker payload to confirm the produced trait
#   object survives one send / receive / flush cycle without
#   panicking.
# - **`cross_law_transcode`** (r262): cross-law PSTN-gateway
#   transcoding lifecycle — decode incoming bytes under one law,
#   re-encode the recovered PCM as the *other* law, then optionally
#   decode + re-encode in reverse for the full A↔µ↔A roundtrip.
#   The first five targets all stay within one law per pipeline;
#   this target is the first to assert that **two different-law
#   trait objects compose correctly through the trait surface** at
#   the byte level. The cross-law output must equal
#   `encode_B(decode_A(b))` applied byte-by-byte to every input
#   byte (and the reverse must equal the analogous double-transcode
#   per-sample baseline) — any framing-level reorder, padded
#   sample, or future per-frame state addition that coupled
#   adjacent samples surfaces as a divergent byte on the very
#   first transcoded position.
# - **`zero_suppress_invariants`** (r337): the µ-law all-zero
#   character-signal suppression path (§3.2,
#   `mulaw::encode_sample_zero_suppress`). This is the only encode
#   path the other six targets do not reach — they drive the plain
#   `encode_sample` LUT, never the suppression rewrite. Asserts the
#   spec's wire-level contract across attacker-chosen i16 sequences:
#   the all-zero octet is never emitted, every non-forbidden codeword
#   is left byte-identical to the plain encoder, the one forbidden
#   codeword is rewritten to exactly the spec `00000010` replacement,
#   and the substituted word decodes one uniform segment-7 step inward
#   from the suppressed all-zero word (the decoder is untouched).
[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"

[dependencies.oxideav-g711]
path = ".."

# Prevent this fuzz package from being pulled into the umbrella
# workspace at `crates/*` glob-resolve time.
[workspace]
members = ["."]

[profile.release]
debug = 1

# ------------------------------------------------------------------
# Fuzz targets.
# ------------------------------------------------------------------

[[bin]]
name = "decode_pipeline"
path = "fuzz_targets/decode_pipeline.rs"
test = false
doc = false

[[bin]]
name = "encode_pipeline"
path = "fuzz_targets/encode_pipeline.rs"
test = false
doc = false

[[bin]]
name = "per_sample_invariants"
path = "fuzz_targets/per_sample_invariants.rs"
test = false
doc = false

[[bin]]
name = "streaming_pipeline"
path = "fuzz_targets/streaming_pipeline.rs"
test = false
doc = false

[[bin]]
name = "factory_params"
path = "fuzz_targets/factory_params.rs"
test = false
doc = false

[[bin]]
name = "cross_law_transcode"
path = "fuzz_targets/cross_law_transcode.rs"
test = false
doc = false

[[bin]]
name = "zero_suppress_invariants"
path = "fuzz_targets/zero_suppress_invariants.rs"
test = false
doc = false
